调试 开门拍摄 清运门开启 日志上传 ota下载

--- a/app/模拟自测协议.md
+++ b/app/模拟自测协议.md
@@ -27,6 +27,26 @@
 9B 00 04 04 00 00 0B B8 9A 30kg
 
 状态查询
-9B 00 05 16 01 00 00 00 00 00 00 00 01 00 00 02 00 00 00 00 00 00 00 02 00 00 9A
+9B 00 05 18 01 00 00 00 00 00 00 01 00 00 00 00 02 00 00 00 00 00 00 02 00 00 00 00 9A
 
 
+测试 发送的字节 weight：00 00 00 12-18
+测试 发送的字节 weight：00 00 00 14-20
+测试 发送的字节 weight：00 00 00 16-22
+测试 发送的字节 weight：00 00 00 18-24
+测试 发送的字节 weight：00 00 00 1A-26
+测试 发送的字节 weight：00 00 00 1C-28
+测试 发送的字节 weight：00 00 00 1E-30
+测试 发送的字节 weight：00 00 00 20-32
+测试 发送的字节 weight：00 00 00 22-34
+测试 发送的字节 weight：00 00 00 24-36
+测试 发送的字节 weight：00 00 00 22-34
+测试 发送的字节 weight：00 00 00 24-36
+测试 发送的字节 weight：00 00 00 26-38
+测试 发送的字节 weight：00 00 00 28-40
+测试 发送的字节 weight：00 00 00 2A-42
+测试 发送的字节 weight：00 00 00 2C-44
+测试 发送的字节 weight：00 00 00 2E-46
+测试 发送的字节 weight：00 00 00 30-48
+测试 发送的字节 weight：00 00 00 32-50
+测试 发送的字节 weight：00 00 00 34-32
