debug 界面ui  调试串口模拟

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,171 +1,7 @@
 <resources>
-    <string name="app_name">Fragment App</string>
-    <string name="home_title">Home</string>
-    <string name="detail_title">Detail</string>
-    <string name="settings_title">Settings</string>
-    <string name="profile_title">Profile</string>
-    <string name="edit_profile_title">Edit Profile</string>
-    <string name="btn_save">Save</string>
-    <string name="btn_cancel">Cancel</string>
     <string name="mobile_exit"><u>退出</u></string>
-    <string name="permission_tip">Tip</string>
-    <string name="permission_msg">request permission failed! \n
-            you can grant permission in setting interface -> Permissions</string>
-    <string name="permission_btn_setting">go to setting</string>
-    <string name="permission_btn_quit">quit</string>
-    <string name="str_gui_huan">归还</string>
-    <string name="str_warehouse_status">仓状态</string>
-    <string name="str_mi_ma_login">密码登录</string>
-    <string name="str_setting">系统设置</string>
-    <string name="str_ling_yong">领用</string>
-    <string name="str_tiao_guo_face">跳过人脸识别</string>
-    <string name="str_log">查看日志</string>
-    <string name="str_toolbox">工具箱领用</string>
-    <string name="str_toolbox_xie_tong">协同工具领用</string>
-    <string name="title_date_dialogs">选择查询的日期</string>
-    <string name="import_des_text">1、姓名、人员编号为必填项，其余内容为选填项;\n2、姓名:支持数字、字母、中文、间隔号，2-20位字符;\n3、人员ID:只能填写数字、英文字母，长度小于32位，是人员唯一标识，不可重复，人员ID与导入的人员照片相关联;\n4、省市县单位:支持数字、字母、中文，0~50位字符;</string>
-    <string name="import_des_text2">1、小于1.3M;\n2、面部区域像素不低于100*100像素;\n3、照片名称应为对应人员的人员编号;\n4、照片格式仅支持jpg和png格式;</string>
-    <string name="import_des_text3">1、将facelist.xlsx文件填好后，和对应的人员照片放到同一个文件夹中;\n2、将文件导入U盘中，点击上方的“批量导入”图标进行导入;\n</string>
-    <string-array name="shebeileix">
-        <item>工具箱类型</item>
-        <item>基础作业小型箱</item>
-        <item>量测作业中型箱</item>
-        <item>多功能作业大型箱</item>
-    </string-array>
-
-
-    <string-array name="lk">
-        <item>开始日期</item>
-        <item>2024-12-14</item>
-        <item>2024-12-15</item>
-        <item>2024-12-16</item>
-        <item>2024-12-17</item>
-        <item>2024-12-18</item>
-        <item>2024-12-19</item>
-        <item>2024-12-22</item>
-        <item>2024-12-21</item>
-        <item>2024-12-22</item>
-        <item>2024-12-23</item>
-        <item>2024-12-24</item>
-        <item>2024-12-25</item>
-        <item>2024-12-26</item>
-        <item>2024-12-27</item>
-        <item>2024-12-28</item>
-        <item>2024-12-29</item>
-        <item>2024-12-30</item>
-    </string-array>
-
-    <string-array name="lj">
-        <item>结束日期</item>
-        <item>2024-12-14</item>
-        <item>2024-12-15</item>
-        <item>2024-12-16</item>
-        <item>2024-12-17</item>
-        <item>2024-12-18</item>
-        <item>2024-12-19</item>
-        <item>2024-12-22</item>
-        <item>2024-12-21</item>
-        <item>2024-12-22</item>
-        <item>2024-12-23</item>
-        <item>2024-12-24</item>
-        <item>2024-12-25</item>
-        <item>2024-12-26</item>
-        <item>2024-12-27</item>
-        <item>2024-12-28</item>
-        <item>2024-12-29</item>
-        <item>2024-12-30</item>
-    </string-array>
-
-
-    <string-array name="gk">
-        <item>归还开始日期</item>
-        <item>2024-12-14</item>
-        <item>2024-12-15</item>
-        <item>2024-12-16</item>
-        <item>2024-12-17</item>
-        <item>2024-12-18</item>
-        <item>2024-12-19</item>
-        <item>2024-12-22</item>
-        <item>2024-12-21</item>
-        <item>2024-12-22</item>
-        <item>2024-12-23</item>
-        <item>2024-12-24</item>
-        <item>2024-12-25</item>
-        <item>2024-12-26</item>
-        <item>2024-12-27</item>
-        <item>2024-12-28</item>
-        <item>2024-12-29</item>
-        <item>2024-12-30</item>
-    </string-array>
-
-    <string-array name="gj">
-        <item>归还结束日期</item>
-        <item>2024-12-14</item>
-        <item>2024-12-15</item>
-        <item>2024-12-16</item>
-        <item>2024-12-17</item>
-        <item>2024-12-18</item>
-        <item>2024-12-19</item>
-        <item>2024-12-22</item>
-        <item>2024-12-21</item>
-        <item>2024-12-22</item>
-        <item>2024-12-23</item>
-        <item>2024-12-24</item>
-        <item>2024-12-25</item>
-        <item>2024-12-26</item>
-        <item>2024-12-27</item>
-        <item>2024-12-28</item>
-        <item>2024-12-29</item>
-        <item>2024-12-30</item>
-    </string-array>
-
-
-    <!--指令类型 开仓 箱子内工具查询 永胜德指令-->
-    <string-array name="byte_data_command">
-        <item>01 开仓状态指令</item>
-        <item>03 工具状态指令</item>
-        <item>04 永胜德指令</item>
-    </string-array>
-
-    <!--打开单仓指令（0x01）。-->
-    <string-array name="byte_data_send_00">
-        <item>01 01</item>
-        <item>02 01</item>
-        <item>03 01</item>
-        <item>04 01</item>
-        <item>05 01</item>
-        <item>06 01</item>
-        <item>07 01</item>
-        <item>08 01</item>
-        <item>09 01</item>
-        <item>0a 01</item>
-        <item>0b 01</item>
-        <item>0c 01</item>
-        <item>0d 01</item>
-    </string-array>
-
-    <!-- (3)查询箱内工具箱工具状态信息-->
-    <string-array name="byte_data_send_03">
-        <item>01</item>
-        <item>02</item>
-        <item>03</item>
-        <item>04</item>
-        <item>05</item>
-        <item>06</item>
-        <item>07</item>
-        <item>08</item>
-        <item>09</item>
-        <item>0a</item>
-        <item>0b</item>
-    </string-array>
-
-    <!-- (4)查询永胜德箱内工具箱工具状态信息-->
-    <string-array name="byte_data_send_04">
-        <item>01</item>
-        <item>02</item>
-        <item>03</item>
-        <item>04</item>
-        <item>05</item>
-        <item>06</item>
-    </string-array>
+    <string name="kg_1">2kg校准</string>
+    <string name="kg_2">25kg校准</string>
+    <string name="kg_3">100kg校准</string>
+    <string name="kg_4">板框校准</string>
 </resources>
