调整 查询最新一条事务的操作 处理上报清运数据换算   剩余异常上报处理

--- a/app/模拟自测协议.md
+++ b/app/模拟自测协议.md
@@ -27,9 +27,19 @@
 9B 00 04 04 00 00 0B B8 9A 30kg
 
 状态查询
-9B 00 05 18 01 00 00 00 00 00 00 01 00 00 01 00 02 00 00 00 00 00 00 02 00 00 01 00 9A
+
+9B 00 05 18 01 00 00 00 04 00 01 00 00 00 00 00 02 00 00 00 00 00 00 02 00 00 00 00 9A
+9B 00 05 18 01 00 00 00 30 00 00 00 00 00 01 00 02 00 00 00 00 00 00 02 00 00 00 00 9A
 
 
+测试 发送的字节 weight：00 00 00 02-2
+测试 发送的字节 weight：00 00 00 04-4
+测试 发送的字节 weight：00 00 00 06-6
+测试 发送的字节 weight：00 00 00 08-8
+测试 发送的字节 weight：00 00 00 0A-10
+测试 发送的字节 weight：00 00 00 0C-12
+测试 发送的字节 weight：00 00 00 0E-14
+测试 发送的字节 weight：00 00 00 10-16)
 测试 发送的字节 weight：00 00 00 12-18
 测试 发送的字节 weight：00 00 00 14-20
 测试 发送的字节 weight：00 00 00 16-22
@@ -40,8 +50,6 @@
 测试 发送的字节 weight：00 00 00 20-32
 测试 发送的字节 weight：00 00 00 22-34
 测试 发送的字节 weight：00 00 00 24-36
-测试 发送的字节 weight：00 00 00 22-34
-测试 发送的字节 weight：00 00 00 24-36
 测试 发送的字节 weight：00 00 00 26-38
 测试 发送的字节 weight：00 00 00 28-40
 测试 发送的字节 weight：00 00 00 2A-42
@@ -49,4 +57,4 @@
 测试 发送的字节 weight：00 00 00 2E-46
 测试 发送的字节 weight：00 00 00 30-48
 测试 发送的字节 weight：00 00 00 32-50
-测试 发送的字节 weight：00 00 00 34-32
+测试 发送的字节 weight：00 00 00 34-50
