--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="kg_2">25kg校准</string>
     <string name="kg_3">100kg校准</string>
     <string name="kg_4">板框校准</string>
+    <string name="title_date_dialogs">选择流量卡到期时间</string>
 </resources>
